--- a/client/src/app/components/view2/view2.component.html
+++ b/client/src/app/components/view2/view2.component.html
@@ -10,7 +10,7 @@
   </div>
   <div class="row">
     <div class="col" *ngFor="let img of bundleinfo.urls">
-      <img [src]="img.substring(1,img.length-1)" width="200px">
+      <img [src]="img" width="200px">
     </div>
   </div>
   <div class="row">
