added lottie animation and fixed memory leak

--- a/client/src/app/components/view1/view1.component.html
+++ b/client/src/app/components/view1/view1.component.html
@@ -35,6 +35,7 @@
   <div *ngIf="isLoading">
     <div class="row">
       <h6 style="color: red;">please wait, files are being uploaded</h6>
+      <ng-lottie [options]="options"></ng-lottie>
     </div>
   </div>
 
